k8s/monitoring/datadog-agent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datadog
  labels:
    name: datadog
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: datadog-agent
  namespace: datadog
  labels:
    app: datadog-agent
spec:
  selector:
    matchLabels:
      app: datadog-agent
  template:
    metadata:
      labels:
        app: datadog-agent
      name: datadog-agent
    spec:
      serviceAccountName: datadog-agent
      containers:
      - image: gcr.io/datadoghq/agent:7
        imagePullPolicy: Always
        name: datadog-agent
        ports:
          - containerPort: 8125
            name: dogstatsdport
            protocol: UDP
          - containerPort: 8126
            name: traceport
            protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "256m"
        volumeMounts:
          - name: dockersocketdir
            mountPath: /host/var/run
            mountPropagation: None
          - name: procdir
            mountPath: /host/proc
            mountPropagation: None
            readOnly: true
          - name: cgroups
            mountPath: /host/sys/fs/cgroup
            mountPropagation: None
            readOnly: true
          - name: s6-run
            mountPath: /var/run/s6
            mountPropagation: None
          - name: logpodpath
            mountPath: /var/log/pods
            mountPropagation: None
            readOnly: true
          - name: logcontainerpath
            mountPath: /var/lib/docker/containers
            mountPropagation: None
            readOnly: true
          - name: pointdir
            mountPath: /opt/datadog-agent/run
            mountPropagation: None
        livenessProbe:
          httpGet:
            path: /health
            port: 5555
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: dockersocketdir
          hostPath:
            path: /var/run
        - name: procdir
          hostPath:
            path: /proc
        - name: cgroups
          hostPath:
            path: /sys/fs/cgroup
        - name: s6-run
          emptyDir: {}
        - name: logpodpath
          hostPath:
            path: /var/log/pods
        - name: logcontainerpath
          hostPath:
            path: /var/lib/docker/containers
        - name: pointdir
          hostPath:
            path: /opt/datadog-agent/run
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: datadog-agent
  namespace: datadog
  labels:
    app: datadog-agent
spec:
  ports:
  - port: 8125
    protocol: UDP
    targetPort: 8125
    name: dogstatsdport
  - port: 8126
    protocol: TCP
    targetPort: 8126
    name: traceport
  selector:
    app: datadog-agent
